# fsmp-kmc

./: .gitattributes  .gitignore  Inter_potential.h  LICENSE  LJ_Energy.h  LJ_EnergyChange.h  LJ_inter_mols.h  Makefile  Metropolis_iteration.h  PBC2D.h  PotentialEnergy.h  PotentialEnergyChange.h  PotentialEnergy_2.h  PotentialEnergy_SEP.h  PotentialEnergy_exact.h  README.md  Rosenbluth_algorithm_simple.h  Rosenbluth_iteration.h  StructureGenerator.h  StructureGenerator_test2.h  Weighted_averages.h  Widom_test.h  block_error.h  bootstrap_error.h  bubbleplot3.m  build.cmd  cent_potential.h  center_of_mass.h  centering_the_crystal.h  density_change.h  density_in_central_cell.h  density_to_Ly.h  distPBC.h  energies_and_forces.h  energies_and_forces_2.h  energies_and_forces_approx.h  energies_and_forces_exact.h  energies_and_forces_exact_ab.h  energies_and_forces_exact_distPBC.h  energies_and_forces_exact_not.h  (+59 more)
gui/: pyproject.toml  studio.spec  studio_launcher.py
gui/fsmp_gui/: __init__.py  app.py  atom_table.py  canvas.py  cellfile.py  chem.py  elements.py  engine.py  forcefield.py  generate.py  glyph.py  gridview.py  main_window.py  mmff.py  molecule.py  placement_table.py  plot.py  potential_viewer.py  project.py  runs.py  selftest.py  simcell.py  site_table.py  sitemodel.py  start_page.py  theme.py  trajectory.py  unit_cell_canvas.py
gui/tests/: test_canvas.py  test_cellfile.py  test_chem.py  test_core.py  test_create_potential.py  test_engine.py  test_generate.py  test_mmff.py  test_native_launch.py  test_run_tab.py  test_runs.py  test_simcell.py  test_unit_cell.py  test_version.py
(+88 files in other folders)
