[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fsmp-gui"
version = "0.1.0"
description = "Desktop workbench for FSMP-kMC: molecules, potentials, unit cells and simulations"
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6", "numpy>=1.24"]

[project.optional-dependencies]
build = ["pyinstaller"]   # for tools/make_bundle.py (the Studio bundle)

[project.gui-scripts]
fsmp-gui = "fsmp_gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fsmp_gui*"]

[tool.setuptools.package-data]
fsmp_gui = ["assets/*"]
