[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fsmp-gui"
# keep in sync with ../version.h, the single project-version source (the
# running app reads version.h itself; this is package metadata only)
version = "1.0.0"
description = "Desktop workbench for FSMP-kMC: molecules, potentials, unit cells and simulations"
requires-python = ">=3.10"
# rdkit powers geometry optimization and the built-in MMFF94 atomistic
# potential generator (BSD, CPU-only, tens of MB)
dependencies = ["PySide6>=6.6", "numpy>=1.24", "rdkit>=2022.9"]

[project.optional-dependencies]
build = ["pyinstaller"]   # for tools/make_bundle.py (the Studio bundle)

[project.gui-scripts]
fsmp-gui = "fsmp_gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fsmp_gui*"]

[tool.setuptools.package-data]
fsmp_gui = ["assets/*"]
